Fix issue #7, add github support

--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
 
     <input id="clear-lever-names" type="checkbox" class="toggle-input" name="toggle">
     <label for="clear-lever-names"> Lever Names</label>
+
     <input id="clear-facebook-photos" type="checkbox" class="toggle-input" name="toggle">
     <label for="clear-facebook-photos"> Facebook Photos</label>
 
     <input id="clear-facebook-names" type="checkbox" class="toggle-input" name="toggle">
     <label for="clear-facebook-names"> Facebook Names</label>
+
+    <input id="clear-github-photos" type="checkbox" class="toggle-input" name="toggle">
+    <label for="clear-github-photos"> Github Photos</label>
+
+    <input id="clear-github-names" type="checkbox" class="toggle-input" name="toggle">
+    <label for="clear-github-names"> Github Names</label>
 
     <div align="center">
 
