Fix issue #8, add meetup support

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <input id="clear-github-names" type="checkbox" class="toggle-input" name="toggle">
     <label for="clear-github-names"> Github Names</label>
 
+    <input id="clear-meetup-photos" type="checkbox" class="toggle-input" name="toggle">
+    <label for="clear-meetup-photos"> Meetup Photos</label>
+
+    <input id="clear-meetup-names" type="checkbox" class="toggle-input" name="toggle">
+    <label for="clear-meetup-names"> Meetup Names</label>
+
     <div align="center">
 
       <h1>Unbiasify</h1>
